# piconet

./: .gitignore  README.md
Projects/hello_world/: CMakeLists.txt
boards/pico2/: CMakeLists.txt  README.md  pico_sdk_import.cmake
boards/pico2/common/: rfm69.c  rfm69.h
boards/pico2/receiver/: main_receiver.c
boards/pico2/sender/: main_sender.c
boards/sparkfun_pro_micro/: CMakeLists.txt
boards/sparkfun_pro_micro/common/: rfm69.c  rfm69.h
boards/sparkfun_pro_micro/receiver/: main_receiver.c
projects/piconet-node/: CMakeLists.txt  README.md  led_test.c  simple_test.c
projects/piconet-node/common/: rfm69.c  rfm69.h
projects/piconet-node/receiver/: main_receiver.c
projects/piconet-node/sender/: main_sender.c
